tests/samples/negative/core/main_bad_return.ax
module main_bad_return;

fn main() -> bool {
    return true;
}
